--- a/src/Silverpop.Client/Silverpop.Client.csproj
+++ b/src/Silverpop.Client/Silverpop.Client.csproj
@@ -4,9 +4,17 @@
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
     <AssemblyName>Silverpop.Client</AssemblyName>
     <RootNamespace>Silverpop.Client</RootNamespace>
-    <Version>0.0.0</Version>
+    <Version>2.1.3</Version>
     <NoWarn>NU1701</NoWarn>
     <NuspecFile>Silverpop.Client.nuspec</NuspecFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>silverpop-dotnet-api-xml</PackageId>
+    <Authors>Ritter Insurance Marketing, Christian Melgarejo</Authors>
+    <Product>Silverpop .NET API + XML</Product>
+    <Description>This is a .NET API wrapper for Silverpop Transact XML email sending.</Description>
+    <PackageTags>silverpop</PackageTags>
+    <PackageProjectUrl>https://github.com/cmelgarejo/silverpop-dotnet-api</PackageProjectUrl>
+    <PackageLicenseUrl></PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +33,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Silverpop.Core\Silverpop.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="licenses\LICENSE.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
