--- a/src/Silverpop.Client/Silverpop.Client.nuspec
+++ b/src/Silverpop.Client/Silverpop.Client.nuspec
@@ -1,29 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<?xml version="1.0"?>
+<package>
   <metadata>
-   <id>silverpop-dotnet-api</id>
-    <title>Silverpop .NET API</title>
-    <version>2.1.0</version>
-    <authors>Ritter Insurance Marketing</authors>
-    <description>This is a .NET API wrapper for Silverpop Transact XML email sending.</description>
-    <projectUrl>https://github.com/ritterim/silverpop-dotnet-api</projectUrl>
-    <licenseUrl>https://github.com/ritterim/silverpop-dotnet-api/blob/master/LICENSE.txt</licenseUrl>
-    <tags>silverpop api</tags>
+    <id>silverpop-dotnet-api-xml</id>
+    <version>2.1.4</version>
+    <title>Silverpop .NET API + XML</title>
+    <authors>Ritter Insurance Marketing, Christian Melgarejo Bresanovich</authors>
+    <owners>Christian Melgarejo Bresanovich</owners>
+    <projectUrl>https://github.com/cmelgarejo/silverpop-dotnet-api</projectUrl>
+    <license type="file">LICENSE.txt</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>This is a .NET API wrapper for Silverpop Transact XML email sending.</description>
+    <tags>silverpop api</tags>
+    <releaseNotes>Add Contact XML API fow working.</releaseNotes>
+    <copyright>Copyright 2018</copyright>
     <dependencies>
-      <group targetFramework="net461">
-        <dependency id="Newtonsoft.Json" version="9.0.1" />
-        <dependency id="SSH.NET" version="2016.1.0" />
-      </group>
-      <group targetFramework="netstandard2.0">
-        <dependency id="System.Configuration.ConfigurationManager" version="4.4.0" />
-        <dependency id="Newtonsoft.Json" version="9.0.1" />
-        <dependency id="SSH.NET" version="2016.1.0" />
-      </group>
+      <dependency id="Newtonsoft.Json" version="12.0.1" />
+      <dependency id="SSH.NET" version="2016.1.0" />
     </dependencies>
   </metadata>
   <files>
     <file src="bin\Release\net461\Silverpop.*.dll" target="lib\net461" />
     <file src="bin\Release\netstandard2.0\Silverpop.*.dll" target="lib\netstandard2.0" />
+    <file src="licenses\LICENSE.txt" target="" />
   </files>
 </package>
