--- a/src/Silverpop.Client/Silverpop.Client.csproj
+++ b/src/Silverpop.Client/Silverpop.Client.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>Silverpop.Client</AssemblyName>
     <RootNamespace>Silverpop.Client</RootNamespace>
-    <Version>2.1.3</Version>
+    <Version>2.1.7</Version>
     <NoWarn>NU1701</NoWarn>
     <NuspecFile>Silverpop.Client.nuspec</NuspecFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>silverpop-dotnet-api-xml</PackageId>
-    <Authors>Ritter Insurance Marketing, Christian Melgarejo</Authors>
+    <Authors>Christian Melgarejo</Authors>
     <Product>Silverpop .NET API + XML</Product>
     <Description>This is a .NET API wrapper for Silverpop Transact XML email sending.</Description>
     <PackageTags>silverpop</PackageTags>
