--- a/src/Silverpop.Client/Silverpop.Client.nuspec
+++ b/src/Silverpop.Client/Silverpop.Client.nuspec
@@ -2,9 +2,9 @@
 <package>
   <metadata>
     <id>silverpop-dotnet-api-xml</id>
-    <version>2.1.4</version>
+    <version>2.1.7</version>
     <title>Silverpop .NET API + XML</title>
-    <authors>Ritter Insurance Marketing, Christian Melgarejo Bresanovich</authors>
+    <authors>Christian Melgarejo Bresanovich</authors>
     <owners>Christian Melgarejo Bresanovich</owners>
     <projectUrl>https://github.com/cmelgarejo/silverpop-dotnet-api</projectUrl>
     <license type="file">LICENSE.txt</license>
@@ -12,14 +12,14 @@
     <description>This is a .NET API wrapper for Silverpop Transact XML email sending.</description>
     <tags>silverpop api</tags>
     <releaseNotes>Add Contact XML API fow working.</releaseNotes>
-    <copyright>Copyright 2018</copyright>
+    <copyright>Copyright 2019</copyright>
     <dependencies>
       <dependency id="Newtonsoft.Json" version="12.0.1" />
       <dependency id="SSH.NET" version="2016.1.0" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\net461\Silverpop.*.dll" target="lib\net461" />
+    <!-- <file src="bin\Release\net461\Silverpop.*.dll" target="lib\net461" /> -->
     <file src="bin\Release\netstandard2.0\Silverpop.*.dll" target="lib\netstandard2.0" />
     <file src="licenses\LICENSE.txt" target="" />
   </files>
